add js scripting for date, storage, and time events

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
     integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous" />
   <link href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap" rel="stylesheet" />
-  <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="./assets/style.css" />
   <title>Work Day Scheduler</title>
 </head>
 
@@ -21,74 +21,74 @@
   </header>
   <div class="container">
     <!-- Timeblocks go here -->
-    <div class="row">
-      <div class="col-md-1">
-        9:00 AM
+    <div class="row time-block hour1">
+      <div class="col-md-1 hour">
+        9:00 am
       </div>
-      <textarea class="col-md-10"></textarea>
-      <button class="btn btn-save col-md-1"><span class="oi oi-check"></span></button>
+      <textarea class="col-md-10 description" id="9"></textarea>
+      <button class="btn saveBtn col-md-1"><i class="fas fa-save"></i></span></button>
     </div>
-    <div class="row">
-      <div class="col-md-1">
-        10:00 AM
+    <div class="row time-block hour2">
+      <div class="col-md-1 hour">
+        10:00 am
       </div>
-      <textarea class="col-md-10"></textarea>
-      <button class="btn btn-save col-md-1"><span class="oi oi-check"></span></button>
+      <textarea class="col-md-10 description" id="10"></textarea>
+      <button class="btn saveBtn col-md-1"><i class="fas fa-save"></i></span></button>
     </div>
-    <div class="row">
-      <div class="col-md-1">
-        11:00 AM
+    <div class="row time-block hour3">
+      <div class="col-md-1 hour">
+        11:00 am
       </div>
-      <textarea class="col-md-10"></textarea>
-      <button class="btn btn-save col-md-1"><span class="oi oi-check"></span></button>
+      <textarea class="col-md-10 description" id="11"></textarea>
+      <button class="btn saveBtn col-md-1"><i class="fas fa-save"></i></span></button>
     </div>
-    <div class="row">
-      <div class="col-md-1">
-        12:00 PM
+    <div class="row time-block hour4">
+      <div class="col-md-1 hour">
+        12:00 pm
       </div>
-      <textarea class="col-md-10"></textarea>
-      <button class="btn btn-save col-md-1"><span class="oi oi-check"></span></button>
+      <textarea class="col-md-10 description" id="12"></textarea>
+      <button class="btn saveBtn col-md-1"><i class="fas fa-save"></i></span></button>
     </div>
-    <div class="row">
-      <div class="col-md-1">
-        1:00 PM
+    <div class="row time-block hour5">
+      <div class="col-md-1 hour">
+        1:00 pm
       </div>
-      <textarea class="col-md-10"></textarea>
-      <button class="btn btn-save col-md-1"><span class="oi oi-check"></span></button>
+      <textarea class="col-md-10 description" id="13"></textarea>
+      <button class="btn saveBtn col-md-1"><i class="fas fa-save"></i></span></button>
     </div>
-    <div class="row">
-      <div class="col-md-1">
-        2:00 PM
+    <div class="row time-block hour6">
+      <div class="col-md-1 hour">
+        2:00 pm
       </div>
-      <textarea class="col-md-10"></textarea>
-      <button class="btn btn-save col-md-1"><span class="oi oi-check"></span></button>
+      <textarea class="col-md-10 description" id="14"></textarea>
+      <button class="btn saveBtn col-md-1"><i class="fas fa-save"></i></span></button>
     </div>
-    <div class="row">
-      <div class="col-md-1">
-        3:00 PM
+    <div class="row time-block hour7">
+      <div class="col-md-1 hour">
+        3:00 pm 
       </div>
-      <textarea class="col-md-10"></textarea>
-      <button class="btn btn-save col-md-1"><span class="oi oi-check"></span></button>
+      <textarea class="col-md-10 description" id="15"></textarea>
+      <button class="btn saveBtn col-md-1"><i class="fas fa-save"></i></span></button>
     </div>
-    <div class="row">
-      <div class="col-md-1">
-        4:00 PM
+    <div class="row time-block hour8">
+      <div class="col-md-1 hour">
+        4:00 pm
       </div>
-      <textarea class="col-md-10"></textarea>
-      <button class="btn btn-save col-md-1"><span class="oi oi-check"></span></button>
+      <textarea class="col-md-10 description" id="16"></textarea>
+      <button class="btn saveBtn col-md-1"><i class="fas fa-save"></i></span></button>
     </div>
-    <div class="row">
-      <div class="col-md-1">
-        5:00 PM
+    <div class="row time-block hour9">
+      <div class="col-md-1 hour">
+        5:00 pm
       </div>
-      <textarea class="col-md-10"></textarea>
-      <button class="btn btn-save col-md-1"><span class="oi oi-check"></span></button>
+      <textarea class="col-md-10 description" id="17"></textarea>
+      <button class="btn saveBtn col-md-1"><i class="fas fa-save"></i></span></button>
     </div>
   </div>
 
   <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
-  <script src="/assets/script.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
+  <script src="./assets/script.js"></script>
 </body>
 
 </html>
